adicionada nova função que possibilita a utitilização por mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button>Tocar</button>
     </div>
 
-    <footer>Criado por Matheus Maltez no curso da B7Web</footer>
+    <footer>Criado por <a href="https://www.linkedin.com/in/matheus-maltez-74513152/">Matheus Maltez</a>. Créditos para B7Web.</footer>
 
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
